tests/sources/invalid/types/semantic_unary_minus_undefined.fire
// Semantic type error: unary minus operand type cannot be determined
// (undefined identifier).

fn unary_minus_undefined() -> void {
    x: int32 = -undefinedValue;  //~ ERROR FS-PARSE-0003 @17
}
